# vector_retrieval_service

./: .gitignore  Makefile  README.md  pyproject.toml
src/vector_retrieval_service/embedding_retriever/models/: llms.py  model_factory.py
src/vector_retrieval_service/service_api/: fastapi_app.py  fastapi_views.py
src/vector_retrieval_service/service_api/services/: dtos.py  retrival_service.py  text_services.py
