[project]
name = "vector-retrieval-service"
version = "0.1.0"
description = ""
authors = [
    {name = "FSchia",email = "36175560+chafa618@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [
    {include = "vector_retrieval_service",from = "src"}
]

[tool.poetry.dependencies]

fastapi = "^0.68.1"
requests = "^2.32.3"
numpy = "^2.2.3"
openai = "^1.63.2"
sentence-transformers = "^3.4.1"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
ruff = "^0.9.6"
asyncer = "^0.0.8"




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
